--- a/.project
+++ b/.project
@@ -24,4 +24,11 @@
 		<nature>org.eclipse.cdt.core.ccnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>driverlib.h</name>
+			<type>1</type>
+			<location>C:/Users/Naveed/workspace_v6_1/MSP432_DriverLib_2_20_00_08/driverlib/MSP432P4xx/driverlib.h</location>
+		</link>
+	</linkedResources>
 </projectDescription>
